--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,4 +20,8 @@ spring:
         password:
     h2.console.enabled: true
 
+springdoc:
+    api-docs.path: /v3/api-docs
+    swagger-ui.path: /swagger-ui.html
+
 logging.level.org.hibernate: ERROR
