--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
         database-platform: org.hibernate.dialect.H2Dialect
         show-sql: ${SHOW_SQL:false}
     datasource:
-        url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+        url: jdbc:h2:mem:maindb;DB_CLOSE_DELAY=-1
         driverClassName: org.h2.Driver
         username: sa
         password:
